@@ -95,7 +95,7 @@ public class RouteService extends ServiceBase {
             deleteChild(child.getId());
         }
         // 查询子节点
-        List<Long> idList = childList.stream().map(RouteVo::getId).collect(Collectors.toList());
+        List<Long> idList = childList.stream().map(RouteVo::getId).toList();
         // 没有子节点，提前退出这个递归
         if (idList.isEmpty()) {
             return;
@@ -135,7 +135,7 @@ public class RouteService extends ServiceBase {
         }
         match = redisTemp.sMembers(key);
         route.setMatchPath(match.stream().map(String.class::cast).toList());
-        route.setDirectPath(redisTemp.sMembers(RedisConstant.ROUTE_ROLE_PREFIX + roleId + RedisConstant.ROUTE_DIRECT_SUFFIX) //
+        route.setDirectPath(redisTemp.sMembers(RedisConstant.ROUTE_ROLE_PREFIX + roleId + RedisConstant.ROUTE_DIRECT_SUFFIX)
                 .stream().map(String.class::cast).toList());
         return route;
     }
@@ -166,9 +166,9 @@ public class RouteService extends ServiceBase {
             setUserRoute(userId);
         }
         match = redisTemp.sMembers(key);
-        route.setMatchPath(match.stream().map(String.class::cast).collect(Collectors.toList()));
-        route.setDirectPath(redisTemp.sMembers(RedisConstant.ROUTE_USER_PREFIX + userId + RedisConstant.ROUTE_DIRECT_SUFFIX) //
-                .stream().map(String.class::cast).collect(Collectors.toList()));
+        route.setMatchPath(match.stream().map(String.class::cast).toList());
+        route.setDirectPath(redisTemp.sMembers(RedisConstant.ROUTE_USER_PREFIX + userId + RedisConstant.ROUTE_DIRECT_SUFFIX)
+                .stream().map(String.class::cast).toList());
         return route;
     }
 
@@ -185,7 +185,7 @@ public class RouteService extends ServiceBase {
         for (Long roleId : roleIdList) {
             for (Long routeId : routeDao.findIdByRoleId(roleId)) {
                 routeIdList.add(routeId);
-                routeIdList.addAll(findChildByParentId(routeId).stream().map(RouteVo::getId).collect(Collectors.toList()));
+                routeIdList.addAll(findChildByParentId(routeId).stream().map(RouteVo::getId).toList());
             }
         }
         return routeIdList;
@@ -270,7 +270,7 @@ public class RouteService extends ServiceBase {
      */
     public void deleteRoleAndUserCacheByRoleId(long roleId) {
         // 角色
-        redisTemp.deleteMulti(RedisConstant.ROUTE_ROLE_PREFIX + roleId + RedisConstant.ROUTE_DIRECT_SUFFIX, //
+        redisTemp.deleteMulti(RedisConstant.ROUTE_ROLE_PREFIX + roleId + RedisConstant.ROUTE_DIRECT_SUFFIX,
                 RedisConstant.ROUTE_ROLE_PREFIX + roleId + RedisConstant.ROUTE_MATCH_SUFFIX);
         // 用户
         List<Long> userIdList = userDao.findIdByRoleId(roleId);
@@ -288,7 +288,7 @@ public class RouteService extends ServiceBase {
      * @param userId userId
      */
     public void deleteUserCacheByUserId(long userId) {
-        redisTemp.deleteMulti(RedisConstant.ROUTE_USER_PREFIX + userId + RedisConstant.ROUTE_DIRECT_SUFFIX, //
+        redisTemp.deleteMulti(RedisConstant.ROUTE_USER_PREFIX + userId + RedisConstant.ROUTE_DIRECT_SUFFIX,
                 RedisConstant.ROUTE_USER_PREFIX + userId + RedisConstant.ROUTE_MATCH_SUFFIX);
     }
 
@@ -302,7 +302,7 @@ public class RouteService extends ServiceBase {
     public boolean isMatch(long userId, List<String> urlList) {
         String key = RedisConstant.ROUTE_USER_PREFIX + userId + RedisConstant.ROUTE_MATCH_SUFFIX;
         // 判断值是否存在
-        if (Boolean.TRUE.equals(redisTemp.sIsMemberMulti(key, urlList).containsValue(true))) {
+        if (redisTemp.sIsMemberMulti(key, urlList).containsValue(true)) {
             // 存在
             return true;
         }
@@ -352,13 +352,13 @@ public class RouteService extends ServiceBase {
             // 创建角色的"匹配路径"和"直接路径"
             setRouteByRoleIdList(roleIdList);
             // 获取该用户的"匹配路径"和"直接路径"
-            matchList = redisTemp.sUnionAll( //
-                    roleIdList.stream().map(roleId -> RedisConstant.ROUTE_ROLE_PREFIX + roleId + RedisConstant.ROUTE_MATCH_SUFFIX) //
-                            .collect(Collectors.toList()) //
+            matchList = redisTemp.sUnionAll(
+                    roleIdList.stream().map(roleId -> RedisConstant.ROUTE_ROLE_PREFIX + roleId + RedisConstant.ROUTE_MATCH_SUFFIX)
+                            .toList()
             );
-            directList = redisTemp.sUnionAll( //
-                    roleIdList.stream().map(roleId -> RedisConstant.ROUTE_ROLE_PREFIX + roleId + RedisConstant.ROUTE_DIRECT_SUFFIX) //
-                            .collect(Collectors.toList()) //
+            directList = redisTemp.sUnionAll(
+                    roleIdList.stream().map(roleId -> RedisConstant.ROUTE_ROLE_PREFIX + roleId + RedisConstant.ROUTE_DIRECT_SUFFIX)
+                            .toList()
             );
         }
         // 创建该用户的"匹配路径"和"直接路径"
@@ -398,19 +398,19 @@ public class RouteService extends ServiceBase {
             setRoute();
         }
         // 获取该角色的路由
-        List<String> routeIdList = routeDao.findIdByRoleId(roleId) //
-                .stream().map(Object::toString).collect(Collectors.toList());
+        List<String> routeIdList = routeDao.findIdByRoleId(roleId)
+                .stream().map(Object::toString).toList();
         // 获取该角色的"匹配路径"(去除null)
-        Collection<Object> routeMatch = redisTemp.hGetMulti(RedisConstant.ROUTE_MATCH, routeIdList) //
-                .stream().filter(Objects::nonNull).collect(Collectors.toList());
+        Collection<Object> routeMatch = redisTemp.hGetMulti(RedisConstant.ROUTE_MATCH, routeIdList)
+                .stream().filter(Objects::nonNull).toList();
         // 判断是否有"匹配路径"
         if (routeMatch.isEmpty()) {
             // 不存在，给一个占位符
             routeMatch.add(PLACEHOLDER);
         }
         // 获取该角色的"直接路径"(setRoute已创建)(去除null)
-        Collection<Object> routeDirect = redisTemp.hGetMulti(RedisConstant.ROUTE_DIRECT, routeIdList) //
-                .stream().filter(Objects::nonNull).collect(Collectors.toList());
+        Collection<Object> routeDirect = redisTemp.hGetMulti(RedisConstant.ROUTE_DIRECT, routeIdList)
+                .stream().filter(Objects::nonNull).toList();
         // 判断是否有"直接路径"
         if (routeDirect.isEmpty()) {
             // 不存在，给一个占位符
@@ -433,9 +433,9 @@ public class RouteService extends ServiceBase {
         // 获取根"匹配路径"和"直接路径"
         RouteVo route = findExpandList();
         // 创建根"匹配路径"和"直接路径"
-        Map<String, String> match = route.getMatch() //
+        Map<String, String> match = route.getMatch()
                 .stream().collect(Collectors.toMap(r -> r.getId().toString(), RouteVo::getPath));
-        Map<String, String> direct = route.getDirect() //
+        Map<String, String> direct = route.getDirect()
                 .stream().collect(Collectors.toMap(r -> r.getId().toString(), RouteVo::getPath));
         redisTemp.hSetMulti(RedisConstant.ROUTE_MATCH, match);
         redisTemp.hSetMulti(RedisConstant.ROUTE_DIRECT, direct);
@@ -482,7 +482,7 @@ public class RouteService extends ServiceBase {
         // 如果有子节点
         if (childList != null) {
             // 对子节点进行排序
-            childList = childList.stream().sorted(Comparator.comparing(RouteVo::getSeq)).collect(Collectors.toList());
+            childList = childList.stream().sorted(Comparator.comparing(RouteVo::getSeq)).toList();
             // 子节点生成树
             for (RouteVo child : childList) {
                 makeTree(child, map);
@@ -519,14 +519,14 @@ public class RouteService extends ServiceBase {
             }
         }
         // 排序
-        route.setMatch(route.getMatch().stream() //
-                .sorted(Comparator.comparing(RouteVo::getSeq)) //
-                .sorted(Comparator.comparing(RouteVo::getParentId)) //
-                .collect(Collectors.toList()));
-        route.setDirect(route.getDirect().stream() //
-                .sorted(Comparator.comparing(RouteVo::getSeq)) //
-                .sorted(Comparator.comparing(RouteVo::getParentId)) //
-                .collect(Collectors.toList()));
+        route.setMatch(route.getMatch().stream()
+                .sorted(Comparator.comparing(RouteVo::getSeq))
+                .sorted(Comparator.comparing(RouteVo::getParentId))
+                .toList());
+        route.setDirect(route.getDirect().stream()
+                .sorted(Comparator.comparing(RouteVo::getSeq))
+                .sorted(Comparator.comparing(RouteVo::getParentId))
+                .toList());
         return route;
     }
 
